--- a/calander.html
+++ b/calander.html
@@ -20,12 +20,10 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
 </head>
-
 <body>
     <section class="calander-main container p-2 border rounded">
-        <div class="w-100 d-flex flex-column" style="height: 555px;">
+        <div class="w-100 d-flex flex-column">
 
             <div>
                 <p class="offer-header-font-2 text-center">Choose stay Duration</p>
@@ -39,7 +37,7 @@
                 </p>
             </div>
 
-            <div class="flex-grow-1">
+            <div class="">
 
                 <div class="days-calander pt-3 w-100 m-auto content active" id="content1" style="max-width: 744px;">
                     <div class="m-auto">
@@ -68,44 +66,120 @@
 
                         <div class="weeks d-flex justify-content-between py-2">
                             <div class="calander-weeks">
-                                <div class="weeks"> <p>Sun</p></div>
-                                <div class="weeks"><p>Mon</p></div>
-                                <div class="weeks"><p>Tue</p></div>
-                                <div class="weeks"><p>Wed</p></div>
-                                <div class="weeks"><p>Thu</p></div>
-                                <div class="weeks"><p>Fri</p></div>
-                                <div class="weeks"><p>Sat</p></div>
-                                <div class="dates"><p>1</p></div>
-                                <div class="dates"><p>2</p></div>
-                                <div class="dates"><p>3</p></div>
-                                <div class="dates"><p>4</p></div>
-                                <div class="dates"><p>5</p></div>
-                                <div class="dates"><p>6</p></div>
-                                <div class="dates"><p>7</p></div>
-                                <div class="dates"><p>8</p></div>
-                                <div class="dates"><p>9</p></div>
-                                <div class="dates"><p>10</p></div>
-                                <div class="dates"><p>11</p></div>
-                                <div class="dates"><p>12</p></div>
-                                <div class="dates"><p>13</p></div>
-                                <div class="dates"><p>14</p></div>
-                                <div class="dates"><p>15</p></div>
-                                <div class="dates selected-range selected-range-start"> <p>16</p></div>
-                                <div class="dates selected-range "><p>17</p></div>
-                                <div class="dates selected-range "><p>18</p></div>
-                                <div class="dates selected-range "><p>19</p></div>
-                                <div class="dates selected-range "><p>20</p></div>
-                                <div class="dates selected-range "><p>21</p></div>
-                                <div class="dates selected-range "><p>22</p></div>
-                                <div class="dates selected-range "><p>23</p></div>
-                                <div class="dates selected-range "><p>24</p></div>
-                                <div class="dates selected-range selected-range-endes "><p>25</p></div>
-                                <div class="dates"><p>26</p></div>
-                                <div class="dates"><p>27</p></div>
-                                <div class="dates"><p>28</p></div>
-                                <div class="dates"><p>29</p></div>
-                                <div class="dates"><p>30</p></div>
-                                <div class="dates"><p>31</p></div>
+                                <div class="weeks">
+                                    <p>Sun</p>
+                                </div>
+                                <div class="weeks">
+                                    <p>Mon</p>
+                                </div>
+                                <div class="weeks">
+                                    <p>Tue</p>
+                                </div>
+                                <div class="weeks">
+                                    <p>Wed</p>
+                                </div>
+                                <div class="weeks">
+                                    <p>Thu</p>
+                                </div>
+                                <div class="weeks">
+                                    <p>Fri</p>
+                                </div>
+                                <div class="weeks">
+                                    <p>Sat</p>
+                                </div>
+                                <div class="dates">
+                                    <p>1</p>
+                                </div>
+                                <div class="dates">
+                                    <p>2</p>
+                                </div>
+                                <div class="dates">
+                                    <p>3</p>
+                                </div>
+                                <div class="dates">
+                                    <p>4</p>
+                                </div>
+                                <div class="dates">
+                                    <p>5</p>
+                                </div>
+                                <div class="dates">
+                                    <p>6</p>
+                                </div>
+                                <div class="dates">
+                                    <p>7</p>
+                                </div>
+                                <div class="dates">
+                                    <p>8</p>
+                                </div>
+                                <div class="dates">
+                                    <p>9</p>
+                                </div>
+                                <div class="dates">
+                                    <p>10</p>
+                                </div>
+                                <div class="dates">
+                                    <p>11</p>
+                                </div>
+                                <div class="dates">
+                                    <p>12</p>
+                                </div>
+                                <div class="dates">
+                                    <p>13</p>
+                                </div>
+                                <div class="dates">
+                                    <p>14</p>
+                                </div>
+                                <div class="dates">
+                                    <p>15</p>
+                                </div>
+                                <div class="dates selected-range selected-range-start">
+                                    <p>16</p>
+                                </div>
+                                <div class="dates selected-range ">
+                                    <p>17</p>
+                                </div>
+                                <div class="dates selected-range ">
+                                    <p>18</p>
+                                </div>
+                                <div class="dates selected-range ">
+                                    <p>19</p>
+                                </div>
+                                <div class="dates selected-range ">
+                                    <p>20</p>
+                                </div>
+                                <div class="dates selected-range ">
+                                    <p>21</p>
+                                </div>
+                                <div class="dates selected-range ">
+                                    <p>22</p>
+                                </div>
+                                <div class="dates selected-range ">
+                                    <p>23</p>
+                                </div>
+                                <div class="dates selected-range ">
+                                    <p>24</p>
+                                </div>
+                                <div class="dates selected-range selected-range-endes ">
+                                    <p>25</p>
+                                </div>
+                                <div class="dates">
+                                    <p>26</p>
+                                </div>
+                                <div class="dates">
+                                    <p>27</p>
+                                </div>
+                                <div class="dates">
+                                    <p>28</p>
+                                </div>
+                                <div class="dates">
+                                    <p>29</p>
+                                </div>
+                                <div class="dates">
+                                    <p>30</p>
+                                </div>
+                                <div class="dates">
+                                    <p>31</p>
+                                </div>
                             </div>
                             <div class="calander-weeks">
                                 <p>Sun</p>
@@ -151,12 +225,68 @@
                     </div>
                 </div>
 
-                <div id="content2" class="content months-calander  w-100">
-                    <div>
-                        <p class="duration-font text-center">Duration</p>
+                <div id="content2" class=" content months-calander  w-100" style="overflow: hidden;">
+                    <div class="w-100">
+                        <p class="duration-font text-center mb-5">Duration</p>
                         <div class="buttons d-flex gap-2 justify-content-evenly align-items-center">
-                            <label for="customRange2" class="form-label">Example range</label>
-                            <input type="range" class="form-range" min="0" max="5" id="customRange2">
+
+                            <div class="slider-container">
+                                <input type="range" min="1" max="12" value="1" class="slider" id="durationSlider">
+                                <div class="slider-tooltip" id="sliderTooltip">1 month</div>
+                                <div class="slider-scale">
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+                                    <p></p>
+                                    <p></p>
+                                    <p></p>
+                                    <div class="scale-mark"></div>
+
+                                </div>
+
+                            </div>
                         </div>
                     </div>
 
@@ -203,6 +333,31 @@
             }
             event.target.classList.add('active-d-m-y');
         }
+    </script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const slider = document.getElementById("durationSlider");
+            const tooltip = document.getElementById("sliderTooltip");
+
+            const updateTooltip = () => {
+                const value = slider.value;
+                tooltip.textContent = `${value} month${value > 1 ? 's' : ''}`;
+
+                const percent = (value - slider.min) / (slider.max - slider.min) * 100;
+                const offset = -1.5; // Adjust as necessary to center the tooltip
+                const tooltipPos = percent / 100 * (slider.offsetWidth - 20) + offset;
+
+                tooltip.style.left = `${tooltipPos}px`;
+                slider.style.background = `linear-gradient(to right, #2196F3 ${percent}%, #ddd ${percent}%)`;
+            };
+
+            slider.addEventListener("input", updateTooltip);
+
+            // Initial positioning
+            updateTooltip();
+        });
+
     </script>
 </body>
 
